--- a/service_manifest.yml
+++ b/service_manifest.yml
@@ -1,4 +1,4 @@
-name: HybridAnalysis1
+name: HybridAnalysis
 version: 4.5.0.33
 description: This service integrates with Hybrid Analysis to provide additional threat intelligence and malware analysis capabilities
 
