--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Sync to Gitea and Build
+name: Docker Build and Publish
 
 on:
   push:
@@ -7,12 +7,11 @@ on:
     branches: [ main ]
 
 env:
-  GITEA_REGISTRY: cr.irrh.ca
-  GITEA_IMAGE_NAME: boredenchilada/al4-hybridanalysis
-  GITEA_REPO: https://cr.irrh.ca/boredenchilada/AL4-Hybrid-Analysis.git
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  sync-and-build:
+  build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -21,42 +20,32 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Fetch all history for all branches and tags
 
-      # Get version from service_manifest.yml
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Get version from service_manifest.yml
         id: get_version
         run: |
           VERSION=$(grep "^version:" service_manifest.yml | cut -d' ' -f2)
           echo "::set-output name=version::$VERSION"
 
-      # Push code to Gitea repository
-      - name: Push code to Gitea
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          
-          # Add Gitea remote using token authentication
-          git remote add gitea https://${{ secrets.GITEAUSERNAME }}:${{ secrets.GITEAPASSWORD }}@cr.irrh.ca/boredenchilada/AL4-Hybrid-Analysis.git
-          
-          # Force push to Gitea
-          git push -f gitea main
-          
-          # Push tags to Gitea
-          git push -f gitea --tags
-
-      # Push to Gitea Container Registry
-      - name: Log in to Gitea Container registry
-        uses: docker/login-action@v1
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v3
         with:
-          registry: ${{ env.GITEA_REGISTRY }}
-          username: ${{ secrets.GITEAUSERNAME }}
-          password: ${{ secrets.GITEAPASSWORD }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ steps.get_version.outputs.version }}
 
-      - name: Build and push Docker image to Gitea
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ env.GITEA_REGISTRY }}/${{ env.GITEA_IMAGE_NAME }}:${{ steps.get_version.outputs.version }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
