--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,11 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+      # No packages permission needed as we are not interacting with GHCR
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # Updated from v2 to v4
         with:
           fetch-depth: 0  # Fetch all history for all branches and tags
 
@@ -29,7 +29,7 @@ jobs:
         id: get_version
         run: |
           VERSION=$(grep "^version:" service_manifest.yml | cut -d' ' -f2)
-          echo "::set-output name=version::$VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT # Updated way to set output
 
       # Push code to Gitea repository
       - name: Push code to Gitea
@@ -38,9 +38,10 @@ jobs:
           git config --global user.email "actions@github.com"
           
           # Add Gitea remote using token authentication
+          # Ensure GITEAUSERNAME and GITEAPASSWORD secrets are set in GitHub repo settings
           git remote add gitea https://${{ secrets.GITEAUSERNAME }}:${{ secrets.GITEAPASSWORD }}@cr.irrh.ca/boredenchilada/AL4-Hybrid-Analysis.git
           
-          # Force push to Gitea
+          # Force push main branch to Gitea
           git push -f gitea main
           
           # Push tags to Gitea
@@ -48,14 +49,14 @@ jobs:
 
       # Push to Gitea Container Registry
       - name: Log in to Gitea Container registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3 # Updated login action version
         with:
           registry: ${{ env.GITEA_REGISTRY }}
           username: ${{ secrets.GITEAUSERNAME }}
           password: ${{ secrets.GITEAPASSWORD }}
 
       - name: Build and push Docker image to Gitea
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5 # Updated build-push action version
         with:
           context: .
           push: true
