--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,63 +1,73 @@
-name: Sync to Gitea and Build
+name: Build and Push Docker Image to Gitea Registry
+
+# This workflow is intended for Gitea Actions, not GitHub Actions.
+# It assumes the runner environment has git and docker installed.
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ main ] # Trigger on push to main branch in Gitea
 
 env:
   GITEA_REGISTRY: cr.irrh.ca
   GITEA_IMAGE_NAME: boredenchilada/al4-hybridanalysis
-  GITEA_REPO: https://cr.irrh.ca/boredenchilada/AL4-Hybrid-Analysis.git
+  # GITEA_REPO_URL is provided by Gitea Actions runner environment
+  # GITEA_SHA is provided by Gitea Actions runner environment
 
 jobs:
-  sync-and-build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      # No packages permission needed as we are not interacting with GHCR
+  build-and-push-gitea:
+    runs-on: ubuntu-latest # This label must match your Gitea runner's label
 
     steps:
+      # Manual Checkout using git commands provided by Gitea runner env
       - name: Checkout repository
-        uses: actions/checkout@v4 # Updated from v2 to v4
-        with:
-          fetch-depth: 0  # Fetch all history for all branches and tags
+        run: |
+          echo "Checking out commit $GITEA_SHA from $GITEA_REPO_URL"
+          # Clean workspace first
+          rm -rf ./* || true 
+          rm -rf ./.??* || true
+          # Clone and checkout specific commit
+          git clone $GITEA_REPO_URL . 
+          git checkout $GITEA_SHA
+          echo "Checkout complete."
 
       # Get version from service_manifest.yml
       - name: Get version from service_manifest.yml
         id: get_version
         run: |
+          if [ ! -f service_manifest.yml ]; then
+            echo "Error: service_manifest.yml not found!"
+            exit 1
+          fi
           VERSION=$(grep "^version:" service_manifest.yml | cut -d' ' -f2)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT # Updated way to set output
+          if [ -z "$VERSION" ]; then
+            echo "Error: Could not extract version from service_manifest.yml"
+            exit 1
+          fi
+          echo "Extracted version: $VERSION"
+          # Gitea Actions uses ::set-output name=...::value
+          echo "::set-output name=version::$VERSION"
 
-      # Push code to Gitea repository
-      - name: Push code to Gitea
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          
-          # Add Gitea remote using token authentication
-          # Ensure GITEAUSERNAME and GITEAPASSWORD secrets are set in GitHub repo settings
-          git remote add gitea https://${{ secrets.GITEAUSERNAME }}:${{ secrets.GITEAPASSWORD }}@cr.irrh.ca/boredenchilada/AL4-Hybrid-Analysis.git
-          
-          # Force push main branch to Gitea
-          git push -f gitea main
-          
-          # Push tags to Gitea
-          git push -f gitea --tags
-
-      # Push to Gitea Container Registry
+      # Log in to Gitea Container Registry
       - name: Log in to Gitea Container registry
-        uses: docker/login-action@v3 # Updated login action version
-        with:
-          registry: ${{ env.GITEA_REGISTRY }}
-          username: ${{ secrets.GITEAUSERNAME }}
-          password: ${{ secrets.GITEAPASSWORD }}
+        run: |
+          echo "Logging into Gitea Registry: ${{ env.GITEA_REGISTRY }}"
+          # Requires GITEAUSERNAME and GITEAPASSWORD secrets in Gitea repository/org settings
+          echo ${{ secrets.GITEAPASSWORD }} | docker login ${{ env.GITEA_REGISTRY }} -u ${{ secrets.GITEAUSERNAME }} --password-stdin
+          echo "Login successful."
 
+      # Build and push Docker image to Gitea Registry
       - name: Build and push Docker image to Gitea
-        uses: docker/build-push-action@v5 # Updated build-push action version
-        with:
-          context: .
-          push: true
-          tags: ${{ env.GITEA_REGISTRY }}/${{ env.GITEA_IMAGE_NAME }}:${{ steps.get_version.outputs.version }}
+        run: |
+          IMAGE_TAG="${{ env.GITEA_REGISTRY }}/${{ env.GITEA_IMAGE_NAME }}:${{ steps.get_version.outputs.version }}"
+          echo "Building image: $IMAGE_TAG"
+          docker build -t "$IMAGE_TAG" .
+          echo "Pushing image: $IMAGE_TAG"
+          docker push "$IMAGE_TAG"
+          echo "Push complete."
+
+      # Logout is good practice
+      - name: Log out from Gitea Container registry
+        if: always() # Run even if previous steps fail
+        run: |
+          echo "Logging out from Gitea Registry."
+          docker logout ${{ env.GITEA_REGISTRY }}
